--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 
 \usepackage[font=bf,labelfont=bf,labelsep=quad]{caption}
 
-\usepackage{tikz}
+\usepackage{tikz, pstricks}
 %\usepackage{nicematrix}
 \usepackage{bookmark}
 \usepackage{ntheorem}
