--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 
 \usepackage{blkarray}
 \usepackage{bm}
-%\usepackage[colorlinks=true, linkcolor=black]{hyperref}
+\usepackage[colorlinks=true, linkcolor=black]{hyperref}
 
 %\usepackage{enumerate}
 
@@ -66,23 +66,7 @@
  \tcbuselibrary{breakable}
  \tcbuselibrary{most}
 
-% \tcolorboxenvironment{tl}{colback = cyan!5!white, colframe = cyan!75!black,
-%     colbacktitle = cyan!85!black, enhanced,  breakable}
 
-% \tcolorboxenvironment{thm}{colback = magenta!5!white, colframe = magenta!75!black, 
-%     colbacktitle = magenta!85!black, enhanced,     breakable}
-
-% \tcolorboxenvironment{yl}{colback = red!5!white, colframe = red!75!black, 
-%     colbacktitle = red!85!black, enhanced,     breakable}
-
-% \tcolorboxenvironment{defn}{colback = blue!5!white, colframe = blue!75!black,
-%     colbacktitle = blue!85!black, enhanced,    breakable
-% }
-
-
-% \tcolorboxenvironment{ex}{colback = cyan!5!white, colframe = cyan!75!black, fonttitle = \bfseries,
-%    colbacktitle = cyan!85!black, enhanced,
-%    attach boxed title to top center={yshift=-2mm}, breakable}
 
 \newtcolorbox{ex}[1][]
   {colback = white, colframe = cyan!75!black, fonttitle = \bfseries,
