--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[b5paper, openany]{ctexbook}
 
-
+\usepackage[colorlinks=true, linkcolor=black]{hyperref}
 \usepackage[margin=2.5cm]{geometry}
 
 \usepackage{physics}
@@ -27,7 +27,7 @@
 
 \usepackage{blkarray}
 \usepackage{bm}
-\usepackage[colorlinks=true, linkcolor=black]{hyperref}
+
 
 %\usepackage{enumerate}
 
@@ -154,12 +154,12 @@ subsubsection = {
 
 
 
-\title{中学数学实验教材\\第六册}
+\title{\Huge\bfseries 中学数学实验教材\\第六册（下）}
 
 
 
-\author{中学数学实验教材编写组编}
-\date{1981年6月}
+\author{\Large 中学数学实验教材编写组编}
+\date{\Large 1986年5月}
 
 \maketitle
 
